Fix a crash in DownloadUIAddapter that happens when Java bridge is created/removed quickly while call to async GetAllPages is still in flight.

BUG=639931

Review-Url: https://codereview.chromium.org/2264233002
Cr-Commit-Position: refs/heads/master@{#413654}

Former-commit-id: c1747c84cb590b1d7361cc8b70ff5ac3ec34ce42